--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,16 @@ authors = [
     {name = "Your Name",email = "you@example.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<3.13"
 dependencies = [
     "autogen-agentchat (==0.4.2)",
     "autogen-ext (==0.4.2)",
     "asyncio (==3.4.3)",
     "tiktoken (==0.8.0)",
     "openai (==1.59.7)",
-    "python-dotenv (>=1.0.1,<2.0.0)"
+    "python-dotenv (>=1.0.1,<2.0.0)",
+    "autogenstudio (>=0.4.0.3,<0.5.0.0)",
+    "playwright (>=1.49.1,<2.0.0)"
 ]
 
 
